# LiveFaceRecognition

./: CMakeLists.txt  README.md  main.cpp
